# MiniLaska

./: CMakeLists.txt  a.out  board.c  board.h  board.h.gch  colors.c  colors.h  colors.h.gch  commands.c  commands.h  cpu_bot.c  cpu_bot.h  cpu_bot.h.gch  function_pvp.c  function_pvp.h  function_pvp.h.gch  pvp.c  pvp.h  pvp.h.gch
html/: annotated.html  board_8h_source.html  classes.html  colors_8h_source.html  cpu__bot_8h_source.html  files.html  function__pvp_8h_source.html  init__struct_8h_source.html  print__pawns_8h_source.html  pvp_8h_source.html  structcoordinates__t-members.html  structcoordinates__t.html  structhostage__t-members.html  structhostage__t.html  structpiece__t-members.html  structpiece__t.html  structpiece__t__coll__graph.dot
html/search/: all_0.js  all_1.js  all_2.js  classes_0.js  classes_1.js  classes_2.js  searchdata.js
latex/: annotated.tex  refman.tex  structcoordinates__t.tex  structhostage__t.tex  structpiece__t.tex  structpiece__t.tex.tmp  structpiece__t__coll__graph.dot
